--- a/src/app/posts/post-create/post.create.component.html
+++ b/src/app/posts/post-create/post.create.component.html
@@ -1,1 +1,3 @@
-<h2>Lets try if this is working</h2>
+<textarea rows="10" [(ngModel)]="enteredValue"></textarea>
+<button (click)="onAddPost()">Save Post</button>
+<p>{{ newPost }}</p>
