--- a/src/app/posts/post-create/post.create.component.html
+++ b/src/app/posts/post-create/post.create.component.html
@@ -1,3 +1,8 @@
-<textarea rows="10" [(ngModel)]="enteredValue"></textarea>
-<button (click)="onAddPost()">Save Post</button>
+<mat-card>
+    <mat-form-field appearance="fill">
+        <textarea matInput rows="5" [(ngModel)]="enteredValue"></textarea>
+    </mat-form-field>
+    <button mat-raised-button color="primary" (click)="onAddPost()">Save Post</button>
+</mat-card>
+
 <p>{{ newPost }}</p>
