--- a/src/app/posts/post-create/post.create.component.html
+++ b/src/app/posts/post-create/post.create.component.html
@@ -1,6 +1,9 @@
 <mat-card>
+    <mat-form-field>
+        <input matInput type="text" [(ngModel)]="enteredTitle">
+    </mat-form-field>
     <mat-form-field appearance="fill">
-        <textarea matInput rows="5" [(ngModel)]="enteredValue"></textarea>
+        <textarea matInput rows="5" [(ngModel)]="enteredContent"></textarea>
     </mat-form-field>
     <button mat-raised-button color="primary" (click)="onAddPost()">Save Post</button>
 </mat-card>
